# LiPlayerPro

./: Cargo.toml  LICENSE  theme.toml
path\to\.config\LiPlayerPro/: config.toml  theme.toml
src/: app.rs  audio_engine.rs  config.rs  library.rs  main.rs  scanner.rs  theme.rs  types.rs  ui.rs  watcher.rs
